sort.basic.lessons.sort.basic.selection.AlgSelectionSort.scala.error
AlgSelectionSort:16: error: type mismatch;
 found   : Boolean
 required: Int
      if (plusPetit(compteur,minimum==true)){
                                    ^AlgSelectionSort:25: error: not found: value i
    echange(caseMinimum,i)
                        ^